--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,6 @@
 kotlin.code.style=official
 kotlin_serialization_version=1.7.2
-kotlin_corroutines_version=1.9.0
+kotlin_corroutines_version=1.8.1
 kotest_version=5.9.1
 kotlin_faker=2.0.0-rc.6
+skrapeit_version=1.2.2
